@@ -1,3 +1,9 @@
+2007-03-28 Erik Romijn <eromijn@ripe.net>
+	* Fixed a large memory leak in TABLE_DUMP_V2 processing
+
+2007-03-27 Erik Romijn <eromijn@ripe.net>
+	* Fixed a bug causing segfaults on processing some MP_REACH_NLRI's
+
 2007-03-09 Erik Romijn <eromijn@ripe.net>
 	* Updated TABLE_DUMP_V2 support to comply with draft-ietf-grow-mrt-04
 
